--- a/templates/header.html
+++ b/templates/header.html
@@ -6,14 +6,14 @@
                 <img src="{% static 'img/logo.png' %}">
             </a>
         </div>
-{#        <div id="gnb">#}
-{#            <nav role="navigation" itemscope itemtype="">#}
-{#                <form>#}
-{#                    <input type="text" name="search" value="" id="gnb-search" placeholder="무엇을 찾고 계시나요?">#}
-{#                    <img class="fa-search" src="{% static 'img/search.png' %}">#}
-{#                </form>#}
-{#            </nav>#}
-{#        </div>#}
+        {#        <div id="gnb">#}
+        {#            <nav role="navigation" itemscope itemtype="">#}
+        {#                <form>#}
+        {#                    <input type="text" name="search" value="" id="gnb-search" placeholder="무엇을 찾고 계시나요?">#}
+        {#                    <img class="fa-search" src="{% static 'img/search.png' %}">#}
+        {#                </form>#}
+        {#            </nav>#}
+        {#        </div>#}
         <div id="header_tnb">
             {% if user.is_authenticated %}
                 <a id="point" href="{% url 'point_history' %}">
@@ -41,7 +41,9 @@
         </div>
         <div class="header-dropdown" style='display:none;'>
             <a href="{% url 'dashboard' %}">마이소셜업</a>
-            <a href="{% url 'product_upload' %}">포스팅 쓰기</a>
+            {% if user.seller %}
+                <a href="{% url 'product_upload' %}">포스팅 쓰기</a>
+            {% endif %}
             <div class="header-menu">구매<span><i class="fa fa-caret-down" aria-hidden="true"></i></span></div>
             <div class="header-sub-menu buyer">
                 <a href="{% url 'wish_list' %}">- 위시리스트</a>
