--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -218,6 +218,7 @@
                                 옵션추가
                             </div>
                             <div class="price-option-area">
+                                <input id="id_variation_set-1-is_default" name="variation_set-1-is_default" type="checkbox">
                                 <div class="form-input">
                                     <input class="variation_price" id="id_variation_set-1-price"
                                            name="variation_set-1-price" placeholder="옵션의 추가 비용">
