--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -214,27 +214,8 @@
                                 {{ field.day }}
                                 <span class="price_unit">일</span>
                             </div>
-                            <div class="title">
-                                옵션추가
-                            </div>
-                            <div class="price-option-area">
-                                <div class="form-input">
-                                    <input class="variation_price" id="id_variation_set-1-price"
-                                           name="variation_set-1-price" placeholder="옵션의 추가 비용">
-                                    <label>원 추가시</label>
-                                </div>
-                                <div class="form-input">
-                                    <input class="variation_title" id="id_variation_set-1-title"
-                                           name="variation_set-1-title" placeholder="추가 비용을 지불 시 제공하는 상품 내용">
-                                </div>
-                                <div class="form-input">
-                                    <input class="variation_day" id="id_variation_set-1-day"
-                                           name="variation_set-1-day" placeholder="옵션 구매 시 추가 일수">
-                                    <label>일 추가</label>
-                                </div>
-                                <div class="options plus">
-                                    <i class="fa fa-plus" aria-hidden="true"></i>
-                                </div>
+                            <div class="step3_button">
+                                <button class="add_option" type="button">옵션추가하기</button>
                             </div>
                         {% endfor %}
                     </div>
