--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -350,5 +350,5 @@
     color: white;
     font-size: 16px;
     font-weight: 300;
-    padding: 14px 139px 14px 139px;
+    padding: 14px 0 14px 0;
 }
