--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -262,21 +262,24 @@ body {
 }
 
 .dashboard-content .dashboard-register-seller .dashboard-register-seller-description {
-    font-size: 14px;
-    line-height: 1.4;
+    font-size: 12px;
+    line-height: 1.5;
     font-weight: 400;
     float: left;
-    width: 370px;
+    width: 360px;
 }
 
 .dashboard-content .dashboard-register-seller .dashboard-register-seller-button {
     float: right;
-    width: 135px;
-    height: 40px;
+    width: 120px;
+    height: 35px;
     background: #648efc;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 5px;
 }
 
 .dashboard-content .dashboard-menu {
