--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -35,7 +35,11 @@
                         <img src="{{ item.get_image_url }}">
                     </div>
                     <div class="item-title">
-                        {{ item }}
+                        <h3>{{ item }}</h3>
+                        <div class="item-meta">
+                            <p>{{ item.updated|date:"Y.m.d" }}</p>
+                            <p><a href="{% url 'product_change' product_id=item.id %}">수정하기</a></p>
+                        </div>
                     </div>
                 </div>
             {% endfor %}
