--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -88,7 +88,7 @@
                             <div class="form-input">
                                 <label><span>*</span>SNS 주소</label>
                                 <div class="form-url-input">
-                                    <input id="id_url" name="url" placeholder="주소 공개시 광고주의 신뢰도가 높아집니다." type="text">
+                                    {{ url_form }}
                                     <div class="button add_url">+</div>
                                     <input type="checkbox" id="is_active" name="url_is_active" checked><label
                                         for="is_active">비공개</label>
