--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block dashboard_js %}
+    <script type="text/javascript" src="{% static 'js/seller/manage.js' %}"></script>
     <script type="text/javascript">
         $(function () {
             {% if messages %}
@@ -38,14 +39,30 @@
                         <h3>{{ item }}</h3>
                         <div class="item-meta">
                             <p>{{ item.updated|date:"Y.m.d" }}</p>
-                            <p><a href="{% url 'product_change' product_id=item.id %}">수정하기</a></p>
-                            <p>
-                            <form action="{% url 'product_delete' %}">
-                                <input type="hidden" name="delete_product" value="{{ item.id }}">
-                                <input type="submit" value="삭제하기">
-                            </form>
-                            </p>
                         </div>
+                    </div>
+                    <div class="item-rating" data-rating="{{ list.item.rating }}">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                    <div class="dashboard-item-more">
+                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                    </div>
+                    <div class="dashboard-item-popup">
+                        <ul>
+                            <li id="popup-edit">
+                                <a href="{% url 'product_change' product_id=item.id %}">수정하기</a>
+                            </li>
+                            <li id="popup-delete">
+                                <form action="{% url 'product_delete' %}">
+                                    <input type="hidden" name="delete_product" value="{{ item.id }}">
+                                    <input type="submit" value="삭제하기">
+                                </form>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             {% endfor %}
