--- a/static/css/dashboard/wishlist.css
+++ b/static/css/dashboard/wishlist.css
@@ -91,13 +91,14 @@
 }
 
 .dashboard-wishlist .dashboard-wishlist-item .dashboard-wishlist-item-more i {
-    font-size: 24px;
-    color: rgba(0, 0, 0, .5);
-    border: 1px solid rgba(0, 0, 0, .5);
-    height: 22px;
-    width: 22px;
+    font-size: 20px;
+    color: white;
+    border-radius: 2px;
+    background: #648efc;
+    height: 20px;
+    width: 20px;
+    line-height: 23px;
     text-align: center;
-    vertical-align: center;
     padding-bottom: 3px;
     padding-right: 2px;
     padding-left: 2px;
