smtp change to sendgrid

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -222,7 +222,7 @@
                         </div>
                         <div class="product-select-list">
                             <div class="product-select-item">
-                                기본- <span>{{ default_price.price }}</span>원
+                                {{ default_price }} - <span>{{ default_price.price }}</span>원
                             </div>
                         </div>
                         <div class="product-total">
