--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -76,7 +76,7 @@
 .signup input {
     width: 400px;
     height: 40px;
-    border: 3px solid #EAEAEA;
+    border-bottom: 1px solid #EAEAEA;
     font-weight: 300;
     padding-left: 20px;
     margin-bottom: 15px;
@@ -208,7 +208,7 @@
 .login input {
     width: 400px;
     height: 40px;
-    border: 3px solid #EAEAEA;
+    border-bottom: 1px solid #EAEAEA;
     font-weight: 300;
     padding-left: 20px;
     margin-bottom: 15px;
@@ -337,7 +337,7 @@
 .reset-password input {
     width: 400px;
     height: 40px;
-    border: 3px solid #EAEAEA;
+    border-bottom: 1px solid #EAEAEA;
     font-weight: 300;
     padding-left: 20px;
     margin-bottom: 15px;
@@ -351,4 +351,8 @@
     font-size: 16px;
     font-weight: 300;
     padding: 14px 0 14px 0;
+}
+
+input {
+    font-size: 12px;
 }
