--- a/templates/account/auth/auth_paper_1.html
+++ b/templates/account/auth/auth_paper_1.html
@@ -1,4 +1,4 @@
-소셜업(이하 “회사”)는 회사가 운영하는 인터넷 사이트(Socail.kr,이하 “소셜업”)을 이용하는 이용자님들의 개인정보를 매우 중요하게 생각하며 아래와 같은 개인 정보취급방침을 가지고 있습니다. 이 개인정보취급방침은 개인정보와 관련한 법령 또는 지침의 변경이 있는 경우 갱신되고, 정책의 변화에 따라 달라질 수 있으니 이용자께서는 소셜업 사이트를 방문 시 수시로 확인하여 주시기 바랍니다. 소셜업의 개인정보취급방침은 다음과 같은 내용을 담고 있습니다.<br/><br/>
+소셜업(이하 “회사”)는 회사가 운영하는 인터넷 사이트(Social.kr,이하 “소셜업”)을 이용하는 이용자님들의 개인정보를 매우 중요하게 생각하며 아래와 같은 개인 정보취급방침을 가지고 있습니다. 이 개인정보취급방침은 개인정보와 관련한 법령 또는 지침의 변경이 있는 경우 갱신되고, 정책의 변화에 따라 달라질 수 있으니 이용자께서는 소셜업 사이트를 방문 시 수시로 확인하여 주시기 바랍니다. 소셜업의 개인정보취급방침은 다음과 같은 내용을 담고 있습니다.<br/><br/>
 
 1. 개인정보 수집에 대한 동의<br/><br/>
 소셜업은 서비스 이용을 위한 회원가입시 이용약관의 내용에 대하여 동의하는 의사표시를 ‘동의 후 가입’ 버튼을 누르는 절차를 마련하고 있으며 같은 화면에서 개인정보보호정책 또한 확인하실 수 있습니다. 동의 후 가입을 누르는 경우 개인정보의 수집에 동의한 것으로 봅니다.<br/><br/>
