--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -51,7 +51,7 @@
 
             <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">{% csrf_token %}
                 {% for field in form %}
-                    {% if field.label != 'Confirmation key' %}
+                    {% if field.id_for_label != 'id_confirmation_key' %}
                         {{ field.label_tag }}<br/>
                         {{ field }}
                         {{ field.errors }}<br/>
