--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,12 @@
 <footer>
     <div class="container">
-        <p>사업자등록번호 : 483-15-00403</p>
-        <p>(주)소셜업의 사전 서면 동의 없이 소셜업사이트의 일체의 정보, 컨텐츠등을 상업적 목적으로 전재, 전송할 수 없습니다.</p>
-        <p>소셜업은 통신판매중개자이며 통신판매 당사자가 아닙니다. 따라서 소셜업은 상품, 거래정 및 거래에 대해여 책임을 지지 않습니다.</p>
+        <div class="left">
+            <p>회사명 : 소셜업&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;대표 : 이수지</p>
+            <p>사업자등록번호 : 483-15-00403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;통신판매업신고 : 2016-서울서초-1612호 </p>
+            <p>주소 : 서울특별시 서초구 나루터로15길 30-2 103호</p>
+        </div>
+        <div class="right">
+            <p>고객센터 : 031-954-2640&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이메일 : social_up@naver.com</p>
+        </div>
     </div>
 </footer>
