--- a/templates/home.html
+++ b/templates/home.html
@@ -123,70 +123,121 @@
     <div class="container">
         <div class="special-service">
             <div class="special-info">
-                <div class="special-title">
-                    스페셜 서비스
-                    <div class="special-subtitle">
-                        전문가가 제공하는 최상의 서비스를 소개합니다.
+                {% if message %}
+                    <div class="special-title">
+                        <div class="special-subtitle">
+                            {{ message }}
+                        </div>
                     </div>
-                </div>
-                <div class="special-sort">
-                    <ul>
-                        <li class="sort active" data-type="sort_1">평점순</li>
-                        <li class="sort" data-type="sort_2">최신순</li>
-                    </ul>
-                </div>
+                {% else %}
+                    <div class="special-title">
+                        스페셜 서비스
+                        <div class="special-subtitle">
+                            전문가가 제공하는 최상의 서비스를 소개합니다.
+                        </div>
+                    </div>
+                    <div class="special-sort">
+                        <ul>
+                            <li class="sort active" data-type="sort_1">평점순</li>
+                            <li class="sort" data-type="sort_2">최신순</li>
+                        </ul>
+                    </div>
+                {% endif %}
             </div>
             <div class="special-list">
                 {% if message %}
-                    <div class="no-product-message">
-                        {{ message }}
-                    </div>
-                {% endif %}
-                <div class="product-rating" style="display:block;">
-                    {% for product in products_rating %}
-                        {% cycle '<div class="row">' '' '' '' %}
-                        <a href="{{ product.get_absolute_url }}"
-                           class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
-                            <div class="card-image">
-                                <div class="card-price">
-                                    {{ product.variation_set.first.price }}&#8361;~
+                        {% for product in products %}
+                            {% cycle '<div class="row">' '' '' '' %}
+
+                            <a href="{{ product.get_absolute_url }}"
+                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
+                                <div class="card-image">
+                                    <div class="card-price">
+                                        {{ product.variation_set.first.price }}&#8361;~
+                                    </div>
+                                    <div class="card-price-back"></div>
+                                    <img src="{{ product.get_image_url }}">
                                 </div>
-                                <div class="card-price-back"></div>
-                                <img src="{{ product.get_image_url }}">
-                            </div>
-                            <div class="card-info">
-                                <div class="card-title">
-                                    {{ product.title }}
-                                </div>
-                                <div class="card-subtitle">
-                                    {% for sns in product.sns_set.all %}
-                                        {% for item in sns.analytics.all %}
-                                            {{ item }} {{ item.outcome|round_count }}
+                                <div class="card-info">
+                                    <div class="card-title">
+                                        {{ product.title }}
+                                    </div>
+                                    <div class="card-subtitle">
+                                        {% for sns in product.sns_set.all %}
+                                            {% for item in sns.analytics.all %}
+                                                {{ item }} {{ item.outcome|round_count }}
+                                            {% endfor %}
                                         {% endfor %}
-                                    {% endfor %}
-                                </div>
-                                <div class="card-author">
-                                    <div class="card-author-info">
-                                        {{ product.seller }}
                                     </div>
-                                    <div class="card-author-info-rating" data-rating="{{ product.rating }}">
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                    <div class="card-author">
+                                        <div class="card-author-info">
+                                            {{ product.seller }}
+                                        </div>
+                                        <div class="card-author-info-rating" data-rating="{{ product.rating }}">
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                        {% if products|length == forloop.counter %}
-                            </div>
-                        {% else %}
-                            {% cycle '' '' '' '</div>' %}
-                        {% endif %}
-                    {% endfor %}
+                            </a>
+
+                            {% if products|length == forloop.counter %}
+                    </div>
+                            {% else %}
+                                {% cycle '' '' '' '</div>' %}
+                            {% endif %}
+                        {% endfor %}
+                {% else %}
+                    <div class="product-rating" style="display:block;">
+                        {% for product in products_rating %}
+                            {% cycle '<div class="row">' '' '' '' %}
+
+                            <a href="{{ product.get_absolute_url }}"
+                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
+                                <div class="card-image">
+                                    <div class="card-price">
+                                        {{ product.variation_set.first.price }}&#8361;~
+                                    </div>
+                                    <div class="card-price-back"></div>
+                                    <img src="{{ product.get_image_url }}">
+                                </div>
+                                <div class="card-info">
+                                    <div class="card-title">
+                                        {{ product.title }}
+                                    </div>
+                                    <div class="card-subtitle">
+                                        {% for sns in product.sns_set.all %}
+                                            {% for item in sns.analytics.all %}
+                                                {{ item }} {{ item.outcome|round_count }}
+                                            {% endfor %}
+                                        {% endfor %}
+                                    </div>
+                                    <div class="card-author">
+                                        <div class="card-author-info">
+                                            {{ product.seller }}
+                                        </div>
+                                        <div class="card-author-info-rating" data-rating="{{ product.rating }}">
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+
+                            {% if products|length == forloop.counter %}
+                    </div>
+                            {% else %}
+                                {% cycle '' '' '' '</div>' %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
             </div>
-        </div>
             <div class="product-created" style="display:none;">
                 {% for product in products_created %}
                     {% cycle '<div class="row">' '' '' '' %}
@@ -230,8 +281,8 @@
                         {% cycle '' '' '' '</div>' %}
                     {% endif %}
                 {% endfor %}
+            </div>
+            {% endif %}
         </div>
-    </div>
-    </div>
     </div>
 {% endblock %}
